--- a/src/pages/blog/hello.mdx
+++ b/src/pages/blog/hello.mdx
@@ -6,9 +6,18 @@ author: Agung Andre
 date: 8 September 2022
 summary: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quibusdam voluptatem quidem cupiditate ullam amet iusto blanditiis qui illum nisi maiores laudantium, reprehenderit exercitationem asperiores officiis fugit incidunt, numquam delectus ab. Facere iste delectus maxime est asperiores natus a placeat reprehenderit? Saepe eveniet at animi ipsa libero! Facilis, quod repellat.
 ---
-Hello world in typescript:
+
+import Contact from '../../components/Contact.astro';
 
 ```typescript
 const test = 'Hello world';
 console.log(test);
 ```
+
+## Embeded component
+
+Contact:
+
+<br />
+
+<Contact />
